--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
     background-color: darkcyan;
     justify-content: space-evenly;
     align-items: center;
+    padding-right: 100px;
 }
 
 .nav-bar-links a{
@@ -49,6 +50,40 @@ body {
     background-color: darkcyan;
     align-content: center;
     justify-content: center;
-    padding: 60px;
+    padding: 30px;
     display: flex;
+    gap:10px;
+}
+
+.hero-left {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: space-evenly;
+    width: 500px;
+    
+}
+.hero-left-items{
+    flex: 1;
+    padding-top: 20px;
+}
+
+.hero-title {
+    font-size: 50px;
+    font-weight: 1000;
+    color: coral;
+}
+
+.sign-up {
+    border: 1px solid thistle;
+}
+
+
+
+.button {
+    width: 200px;
+    height: 40px;
+    background-color: aquamarine;
+    border-radius: 25% 50% 25% 50%;
+    text-shadow: 10px 5px palegoldenrod;
 }
