new file:   garf-mage.png 	new file:   garf-necro.png 	new file:   garf-priest.png 	new file:   garf-warr.png 	modified:   index.html 	modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -50,9 +50,11 @@ body {
     background-color: darkcyan;
     align-content: center;
     justify-content: center;
-    padding: 30px;
+    padding: 10px;
     display: flex;
     gap:10px;
+   
+    
 }
 
 .hero-left {
@@ -62,10 +64,12 @@ body {
     justify-content: space-evenly;
     width: 500px;
     
+    
 }
 .hero-left-items{
     flex: 1;
     padding-top: 20px;
+    
 }
 
 .hero-title {
@@ -80,10 +84,80 @@ body {
 
 
 
+
 .button {
     width: 200px;
     height: 40px;
     background-color: aquamarine;
     border-radius: 25% 50% 25% 50%;
     text-shadow: 10px 5px palegoldenrod;
+    margin-top: 10px;
+}
+
+.info-box {
+    background-color: rgba(255, 127, 80, 0.651);
+    align-content: center;
+    justify-content: center;
+    display: flex;
+    padding: 20px;
+    font-size: 30px;
+    font-weight: 900;
+    color: aquamarine;
+    font-style: oblique;
+}
+
+.gallery-picture {
+    display: flex;
+    padding-top: 30px;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    background-color: cadetblue;
+    font-size: 20px;
+    font-style: italic;
+}
+
+.picture-item {
+    display: flex;
+    border: 1px solid red;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 100px;
+    border-radius: 10%;
+   
+}
+
+.picture-item img{
+    border-radius: 10%;
+}
+.gallery-picture2 {
+    display: flex;
+    padding-top: 5px;
+    
+    justify-content: center;
+    gap: 50px;
+    
+    
+}
+
+.picture-item2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: auto;
+    border-radius: 10%;
+    flex-wrap: wrap;
+    justify-items: center;
+    align-content: center;
+   
+}
+
+.gitext {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    flex-wrap: wrap;
+    width: 100px;
+   
 }
